--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@codemirror/lint": "^6.8.1",
     "@uiw/react-codemirror": "^4.23.0",
     "codemirror": "^5.65.17",
+    "framer-motion": "^12.4.7",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
